--- a/src/main/resources/hr/tvz/cartographers/screens/game.fxml
+++ b/src/main/resources/hr/tvz/cartographers/screens/game.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.*?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="1280.0" stylesheets="@../styles/game-styles.css" xmlns="http://javafx.com/javafx/23.0.1"
+            prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.cartographers.GameController">
     <GridPane fx:id="gameGrid" gridLinesVisible="true" layoutX="140.0" layoutY="101.0" prefHeight="500.0"
               prefWidth="500.0" styleClass="grid-pane">
