--- a/src/main/resources/hr/tvz/cartographers/screens/menu.fxml
+++ b/src/main/resources/hr/tvz/cartographers/screens/menu.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.cartographers.MenuController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.cartographers.controllers.MenuController">
     <Label fx:id="menuTitle" alignment="CENTER" layoutX="354.0" layoutY="48.0" prefHeight="104.0" prefWidth="572.0"
            text="Cartographers the game!" textAlignment="CENTER">
         <font>
