--- a/src/main/resources/hr/tvz/cartographers/screens/menu.fxml
+++ b/src/main/resources/hr/tvz/cartographers/screens/menu.fxml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/23.0.1"
+<AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" styleClass="anchor-pane"
+            stylesheets="@styles/menu-styles.css" xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.tvz.cartographers.controllers.MenuController">
-    <Label fx:id="menuTitle" alignment="CENTER" layoutX="354.0" layoutY="48.0" prefHeight="104.0" prefWidth="572.0"
+    <Label fx:id="menuTitle" alignment="CENTER" layoutX="425.0" layoutY="121.0" prefHeight="85.0" prefWidth="455.0"
            text="Cartographers the game!" textAlignment="CENTER">
-        <font>
-            <Font size="36.0"/>
-        </font>
     </Label>
-    <Button contentDisplay="CENTER" layoutX="515.0" layoutY="192.0" onAction="#onStartNewGameButtonClicked"
-            prefHeight="60.0" prefWidth="250.0" text="Start new game">
-        <font>
-            <Font size="24.0"/>
-        </font>
+    <Button contentDisplay="CENTER" layoutX="527.0" layoutY="251.0" onAction="#onStartNewGameButtonClicked"
+            prefHeight="60.0" prefWidth="250.0" text="New game">
     </Button>
-    <Button contentDisplay="CENTER" layoutX="515.0" layoutY="275.0" prefHeight="60.0" prefWidth="250.0"
-            text="Load game">
-        <font>
-            <Font size="24.0"/>
-        </font>
+    <Button contentDisplay="CENTER" layoutX="527.0" layoutY="334.0"
+            prefHeight="60.0" prefWidth="250.0" text="Load game">
     </Button>
-    <Button contentDisplay="CENTER" layoutX="515.0" layoutY="360.0" onAction="#onQuitGameButtonClicked"
+    <Button contentDisplay="CENTER" layoutX="527.0" layoutY="419.0" onAction="#onGenerateDocumentation"
+            prefHeight="60.0" prefWidth="250.0" text="Documentation">
+    </Button>
+    <Button contentDisplay="CENTER" layoutX="527.0" layoutY="502.0" onAction="#onQuitGameButtonClicked"
             prefHeight="60.0" prefWidth="250.0" text="Quit">
-        <font>
-            <Font size="24.0"/>
-        </font>
     </Button>
 </AnchorPane>
