--- a/src/main/resources/hr/tvz/cartographers/screens/game.fxml
+++ b/src/main/resources/hr/tvz/cartographers/screens/game.fxml
@@ -7,7 +7,7 @@
             prefHeight="720.0" prefWidth="1280.0" styleClass="anchor-pane" stylesheets="@styles/game-styles.css"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="hr.tvz.cartographers.controllers.GameController">
-    <GridPane fx:id="gameGrid" gridLinesVisible="true" layoutX="140.0" layoutY="101.0" prefHeight="500.0"
+    <GridPane fx:id="primaryGameGrid" gridLinesVisible="true" layoutX="140.0" layoutY="101.0" prefHeight="500.0"
               prefWidth="500.0" styleClass="grid-pane">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="9.09" prefWidth="100.0"/>
@@ -290,7 +290,7 @@
               prefHeight="45.0" prefWidth="45.0" styleClass="pane" GridPane.columnIndex="10" GridPane.rowIndex="10"/>
     </GridPane>
 
-    <GridPane fx:id="otherPlayerGrid" gridLinesVisible="true" layoutX="960.0" layoutY="101.0" prefHeight="500.0"
+    <GridPane fx:id="secondaryGameGrid" gridLinesVisible="true" layoutX="960.0" layoutY="101.0" prefHeight="500.0"
               prefWidth="500.0" styleClass="grid-pane" visible="false">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="9.09" prefWidth="100.0"/>
